crates/swc_ecma_parser/tests/test262-error-references/fail/17ee4c1ca63f700d.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/17ee4c1ca63f700d.js:1:4
  |
1 | 0B12
  |    ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/17ee4c1ca63f700d.js:1:1
  |
1 | 0B12
  | ^^^

